2006-05-19  Naba Kumar  <naba@gnome.org>

	* gdl/Makefile.am, gdl/gdl-dock-bar.c, gdl/gdl-dock-bar.h,
	gdl/test-dock.c: Added dockbar buttons style (icons/text/both/auto).

=== GDL 0.6.1 ===

2005-10-15  Naba Kumar  <naba@gnome.org>

	* NEWS: More updates.
	
2006-05-12  Johannes Schmid <jhs@cvs.gnome.org>
	
	* NEWS, MAINTAINERS: Updated

2006-05-08  Johannes Schmid <jhs@cvs.gnome.org>

	Revert changes from gdl-no-gnome in HEAD
	* symbol-browser-control: Removed deprecated directory

2006-04-28  Johannes Schmid <jhs@cvs.gnome.org>

	* Makefile.am:
	Fixed distcheck

	* configure.in:
	* NEWS
	Bumped version to 0.6.1 - no major changes, just build fixes

2006-04-17  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO.
	* po/no.po: And the translation.

2006-04-14  Ilkka Tuohela  <hile@iki.fi>

	* configure.in: Added fi to ALL_LINGUAS

2006-03-16  Johannes Schmid <jhs@gnome.org>
	
	* autogen.sh: New autogen.sh, should work better

2005-09-22  Naba Kumar  <naba@gnome.org>

	Patch from: Erwin Rol <mailinglists@erwinrol.com>
	* gdl/gdl-combo-button.c, gdl/gdl-combo-button.h,
	gdl/gdl-dock-bar.c, gdl/gdl-dock-bar.h,
	gdl/gdl-dock-layout.c, gdl/gdl-dock-layout.h,
	gdl/gdl-dock-master.c, gdl/gdl-dock-master.h,
	gdl/gdl-dock-notebook.c, gdl/gdl-dock-notebook.h,
	gdl/gdl-dock-object.c, gdl/gdl-dock-object.h,
	gdl/gdl-dock-paned.c, gdl/gdl-dock-paned.h,
	gdl/gdl-dock-placeholder.c, gdl/gdl-dock-placeholder.h,
	gdl/gdl-dock-tablabel.c, gdl/gdl-dock-tablabel.h,
	gdl/gdl-dock.c, gdl/gdl-dock.h,
	gdl/gdl-icons.c, gdl/gdl-stock.c,
	gdl/gdl-stock.h, gdl/gdl-tools.c,
	gdl/gdl-tools.h: Converted lisense to LGPL from GPL, bug #316850.
	Authors approvals:
	http://sourceforge.net/mailarchive/message.php?msg_id=13015638
	http://sourceforge.net/mailarchive/message.php?msg_id=13020424
	http://sourceforge.net/mailarchive/message.php?msg_id=13015024

2005-08-31  Naba Kumar  <naba@gnome.org>

	* configure.in, gdl.spec.in, gdl-1.0.pc.in: Restored