@@ -1,3 +1,15 @@
+2006-05-25  Naba Kumar  <naba@gnome.org>
+
+	* gdl/gdl-dock-item.c, gdl/gdl-dock-placeholder.c:
+	Added width and height properties for placeholer
+	and restore the dock item dimension when they are attached to
+	the placeholder. Set placeholder width/height when items are
+	hidden. Prevent placeholders to lose their hosts when the dock
+	is reduced to the the root.
+	
+	* gdl/gdl-dock-notebook.c: Set the newly docked widget to
+	current page.
+
 2006-05-19  Naba Kumar  <naba@gnome.org>
 
 	* gdl/Makefile.am, gdl/gdl-dock-bar.c, gdl/gdl-dock-bar.h,
